ajustes do material 11

--- a/referencias/index.html
+++ b/referencias/index.html
@@ -217,13 +217,14 @@
 
         <h3>Projeto de jardinismo: etapas, <i>briefing</i>, levantamento de dados, plano de massa, estudo preliminar, anteprojeto, projeto executivo de plantio e memorial descritivo</h3>
         <p>ABBUD, B. <b>Criando paisagens</b>: guia de trabalho em arquitetura paisagística. São Paulo: Senac, 2010. </p>
+        <p>BAUER, Cornelia von Ammon. Projetos. <b>Ação</b>, c2012. Disponível em: http://www.acaodecor.com.br/projetos/. Acesso em: 21 set. 2023.</p>
+        <p>CZERWINSKI, Pawel. Pintura do campo de cultivo. <b>Unsplash</b>, 6 set. 2018. Disponível em: https://unsplash.com/pt-br/fotografias/_JveVaFqsfQ. Acesso em: 27 jun. 2023. </p>
         <p>FARR, Douglas. <b>Urbanismo sustentável</b>: desenho urbano com a natureza. Grupo A, 2013. </p>
         <p>FICUS. <b>Inspira Flora</b>, c 2023. Disponível em: https://inspiraflora.com.br/search?type=product&q=fícus. Acesso em 24 julho 2023. </p>
         <p>FIGUEIREDO, Ana Carolina C. <b>Projetos de paisagismo e jardinagem</b>. Saraiva, 2021. <i>E-book</i>. ISBN 9786589881117. Disponível em: https://integrada.minhabiblioteca.com.br/#/books/9786589881117/. Acesso em: 26 jul. 2023. </p>
         <p>NIEMEYER, Carlos Augusto da Costa. <b>Paisagismo no planejamento arquitetônico</b>. 3. ed. Uberlândia: Edufu, 2019. </p>
         <p>OLIVO, Paula, B.; MANO, Cássia M. <b>Composição paisagística I</b>. Grupo A, 2019. Disponível em: https://integrada.minhabiblioteca.com.br/#/books/9788595028951/. Acesso em: 24 jul. 2016. </p>
-        <p>SAAB, Loo. Croqui de um projeto realizado por mim em parceria com o Atelier Plural. <i>Pinterest</i>, [s. d.]. Disponível em: https://br.pinterest.com/pin/68891069274969376/. Acesso em: 4 set. 2023. </p>
-        <p>CZERWINSKI, Pawel. Pintura do campo de cultivo. <b>Unsplash</b>, 6 set. 2018. Disponível em: https://unsplash.com/pt-br/fotografias/_JveVaFqsfQ. Acesso em: 27 jun. 2023. </p>
+        <p>SAAB, Loo. Croqui de um projeto realizado por mim em parceria com o Atelier Plural. <b>Pinterest</b>, [s. d.]. Disponível em: https://br.pinterest.com/pin/68891069274969376/. Acesso em: 4 set. 2023. </p>
       </div>
     </section>
     <!-- - - - - - - - - - - - - - - - não alterar abaixo- - - - - - - - - - - - -->
