--- a/10_jardins/index.html
+++ b/10_jardins/index.html
@@ -93,9 +93,9 @@
           <h3>Estilos de jardins</h3>
           <p>Assista no vídeo a seguir um exemplo de estilo de jardim no estilo japonês.</p>
 
-          <div class="espera_video">
-            <h3>Vídeo</h3>
-          </div>
+          
+          <iframe class="video-youtube" width="560" height="315" src="https://www.youtube.com/embed/mE9Xzd-tgC8?si=Wp7Pb5MTvKSfnU-S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          
 
           <p>Além do estilo japonês, existem outros exemplos. Confira: </p>
           <div class="no-print" aria-hidden="true">
@@ -461,9 +461,7 @@
 
           <img src="imgs/bg_dir_folhagem.png" class="img-folhagem_dir hidden-sm hidden-xs no-print" aria-hidden="true">
 
-          <div class="espera_video">
-            <h3>Vídeo</h3>
-          </div>
+          <iframe class="video-youtube" width="560" height="315" src="https://www.youtube.com/embed/jRqu9akTgOY?si=_dafCm9VJHZs9vha" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
           <h3>Composições paisagísticas</h3>
           <p>A composição paisagística é tudo que envolve o planejamento e a criação de um projeto paisagístico ou de um jardim. Ela trabalha o equilíbrio visual, a funcionalidade, as necessidades e a expectativa dos usuários e ao mesmo tempo respeita o meio ambiente. Existem alguns princípios, diretrizes e conceitos que garantem uma base de conhecimento para a criação de composições. Que tal conhecer essas diretrizes? </p>
