--- a/03_industria/index.html
+++ b/03_industria/index.html
@@ -77,13 +77,167 @@
       <!-- - - - - - - - cada página é independente  - - - - - - - - - - -->
       <div class="pagina">
         <h2>Indústria: mudança de modelo mental e soluções tecnológicas</h2>
-        <p>O mundo passou por verdadeiras transformações em muitos sentidos no decorrer dos séculos. Nos âmbitos econômico, político e social, as revoluções no campo industrial foram marcantes, tendo seu início com a manufatura artesanal, chegando ao que se vive hoje, denominado como Quarta Revolução Industrial ou Indústria 4.0 (Quintino, <i>et al</i>., 2019). </p>
-        <p>Neste momento você pode estar se perguntando: por que eu preciso conhecer as mudanças da indústria nesta unidade curricular? O que esse conhecimento pode agregar na minha formação? A resposta é simples: a indústria é o meio que gera tudo que você consome, usa ou especifica. Por essa razão, entender os processos fabris e como a tecnologia chegou ao que se tem hoje lhe possibilitará fazer escolhas mais conscientes dos produtos e serviços que utiliza em seus projetos. </p>
+        <p>O mundo passou por verdadeiras transformações em muitos sentidos no decorrer dos séculos. Nos âmbitos
+          econômico, político e social, as revoluções no campo industrial foram marcantes, tendo seu início com a
+          manufatura artesanal, chegando ao que se vive hoje, denominado como Quarta Revolução Industrial ou Indústria
+          4.0 (Quintino, <i>et al</i>., 2019). </p>
+        <p>Neste momento você pode estar se perguntando: por que eu preciso conhecer as mudanças da indústria nesta
+          unidade curricular? O que esse conhecimento pode agregar na minha formação? A resposta é simples: a indústria
+          é o meio que gera tudo que você consome, usa ou especifica. Por essa razão, entender os processos fabris e
+          como a tecnologia chegou ao que se tem hoje lhe possibilitará fazer escolhas mais conscientes dos produtos e
+          serviços que utiliza em seus projetos. </p>
         <p>Então, conheça um pouquinho da história para compreender como a indústria cresceu ao longo dos anos.</p>
-        <h1>Espera para vídeo</h1>
-        <video></video>
+        <iframe class="d-print-none video1" src="https://www.youtube.com/embed/8zGGX_FK7x4?si=ND99zLZKv265dpkS"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+        </iframe>
+        <div class="acessivel print">
+          <h3>Revoluções Industriais </h3>
+          <p>Você já parou para pensar em como os produtos são fabricados?</p>
+          <p>Os processos, os métodos, as máquinas e o perfil dos profissionais vêm sofrendo uma constante e
+            significativa mudança. </p>
+          <p>Atualmente, a maioria dos produtos que consumimos vem de indústrias e é fabricada em escala. Mas nem sempre
+            foi assim. </p>
+          <p>Até o final do século 18, produtos como roupas, utensílios domésticos, calçados, alimentos e até remédios
+            eram fabricados por artesãos.</p>
+          <p>O processo era rudimentar e feito com ferramentas muito simples. </p>
+          <p>O artesão costumava herdar o ofício da família, ou seja, aprendia o conhecimento técnico com os seus
+            antepassados, e tinha muita prática na fabricação dos produtos. </p>
+          <p>Conheça as principais características do período de manufatura artesanal: </p>
+          <ul>
+            <li>produtos sem padrão; </li>
+            <li>baixa qualidade; </li>
+            <li>baixo volume de produção; </li>
+            <li>alto custo de fabricação; </li>
+            <li>e trabalhadores altamente qualificados, pois precisavam dominar todo o processo de fabricação e
+              comercialização. </li>
+          </ul>
+          <p>Embora muitos artesãos produzissem para consumo próprio, alguns comercializavam os produtos. </p>
+          <p>Foi então que os empresários, vendo o trabalho dos artesãos, começaram a construir as oficinas.</p>
+          <p>Essas oficinas eram chamadas de manufatura.</p>
+          <p>Nelas, os artesãos trabalhavam para o dono daquele espaço em troca de uma remuneração mensal.</p>
+          <p>Eles eram obrigados a produzir em turnos que chegavam a 16 horas de trabalho.</p>
+          <p>Isso tudo sem nenhum direito trabalhista, como férias e descanso semanal remunerado. Foi assim o início do
+            surgimento das fábricas.</p>
+          <h3>Primeira Revolução Industrial </h3>
+          <p>Iniciada no final do século 18, esse período foi marcado pelo surgimento da indústria e do capitalismo.
+            Aqui tivemos a transição para novos processos de fabricação na Grã-Bretanha, na Europa Continental e nos
+            Estados Unidos.</p>
+          <p>Por volta de 1750, os processos antigos foram substituídos por máquinas.</p>
+          <p>Em 1765, foi criada a primeira máquina a vapor, pelo engenheiro britânico James Watt (UÁT).</p>
+          <p>O equipamento marcou o início da tecelagem em âmbito industrial, na Inglaterra.</p>
+          <p>A partir disso, os produtos tornaram-se acessíveis para pessoas de menor classe social.</p>
+          <p>Outro ponto é que cada trabalhador passou a produzir somente uma parte do produto, conforme o conceito de
+            manufatura em linha de produção. </p>
+          <p>A Primeira Revolução Industrial durou 201 anos e seu período foi de 1712 até 1913. Suas principais
+            características eram:</p>
+          <ul>
+            <li>mecanização da produção; </li>
+            <li>aumento da produção;</li>
+            <li>migração de mão de obra camponesa para indústria; </li>
+            <li>surgimento de novos atores sociais, como os industriais e o operariado.</li>
+          </ul>
+          <h3>Segunda Revolução Industrial </h3>
+          <p>Em 1914, Henry Ford criou a linha de produção em massa.</p>
+          <p>O fordismo é um modelo de produção industrial e surgiu nos Estados Unidos. </p>
+          <p>O fordismo reduziu o tempo de produção e o custo dos veículos.</p>
+          <p>O sistema foi um marco no mercado automobilístico da época, pois até aquele momento os carros eram
+            construídos artesanalmente.</p>
+          <p>Os objetivos eram: </p>
+          <ul>
+            <li>baratear os veículos para venda; e</li>
+            <li>reduzir ao máximo os custos de produção.</li>
+          </ul>
+          <p>Já como características do sistema estão: </p>
+          <ul>
+            <li>a diminuição dos custos; </li>
+            <li>o aprimoramento da linha de montagem de produtos; </li>
+            <li>a pouca exigência de qualificação dos operários;</li>
+            <li>a divisão das tarefas; </li>
+            <li>a repetitividade; </li>
+            <li>o trabalho em cadeia;</li>
+            <li>o trabalho contínuo; </li>
+            <li>a especialização técnica de cada operário conforme a sua função; </li>
+            <li>a produção em grandes quantidades; </li>
+            <li>o investimento em automatização e maquinário; </li>
+            <li>o uso de máquinas de operação humana. </li>
+          </ul>
+          <p>Também foi nesse período que surgiu a energia elétrica, fator que deu origem à esteira rolante e
+            proporcionou um ritmo de produção dinâmico e estável. </p>
+          <p>As principais características da Segunda Revolução Industrial foram: </p>
+          <ul>
+            <li>o uso de novas tecnologias; </li>
+            <li>o desenvolvimento tecnológico; </li>
+            <li>a expansão da industrialização em diversos países; e </li>
+            <li>a produção em massa.</li>
+          </ul>
+          <h3>Terceira Revolução Industrial </h3>
+          <p>Esse período também ficou conhecido como a era da automação. Iniciou na metade do século 20, após a Segunda
+            Guerra Mundial, e durou até 2010. </p>
+          <p>Aqui tivemos um grande avanço tecnológico com a implantação de: </p>
+          <ul>
+            <li>computadores no chão de fábrica; </li>
+            <li>controles eletrônicos; </li>
+            <li>sensores; </li>
+            <li>e dispositivos capazes de gerenciar o processo produtivo. </li>
+          </ul>
+          <p>Em 1950, surgiu no Japão um novo modelo produtivo.</p>
+          <p>O toyotismo é um modelo de produção caracterizado por produzir conforme a demanda de mercado. </p>
+          <p>Ficou conhecido como produção enxuta, do inglês <i>lean manufacturing</i>.</p>
+          <p>Desenvolvido pela Toyota Motor Corporation, o modelo foi influenciado pelas ideias do estatístico americano
+            William Edwards Dêming e pelos ensinamentos do fundador da Toyota, SSAKÍTI TOYÓDA.</p>
+          <p>É um sistema de produção enxuto, que tem como objetivo aumentar a eficiência e a produtividade. </p>
+          <p>São características do toyotismo: </p>
+          <ul>
+            <li>produção <i>just in time</i>; </li>
+            <li>produção em células de trabalho;</li>
+            <li>melhoria contínua; </li>
+            <li>trabalhadores incentivados a compartilhar ideias e sugestões; </li>
+            <li>padronização dos processos. </li>
+          </ul>
+          <p>O avanço tecnológico, com máquinas mais eficientes e utilização de robôs, proporcionou mais produtividade e
+            aumento dos lucros. </p>
+          <p>As principais características da <strong>Terceira Revolução Industrial</strong> foram: </p>
+          <ul>
+            <li>produção flexível; </li>
+            <li>automação industrial; </li>
+            <li>nanotecnologia; </li>
+            <li>biotecnologia;</li>
+            <li>mecatrônica; </li>
+            <li>microinformática; </li>
+            <li>telecomunicações;</li>
+            <li>tecnologia da automação, conhecida como TA; </li>
+            <li>e tecnologia da informação, conhecida como TI. </li>
+          </ul>
+          <h3>Quarta Revolução Industrial </h3>
+          <p>Em 2012, na Alemanha, surge a Indústria 4.0, a era da interação digital.</p>
+          <p>Nesse período, tivemos um salto de produtividade, uma redução de custos e um aumento na integração entre o
+            físico e o virtual.</p>
+          <p>A Indústria 4.0 apoia-se sobre nove pilares tecnológicos. Conheça quais são eles.</p>
+          <p>O <i>big data</i> é a área do conhecimento que busca maneiras de tratar, analisar e gerar conhecimento por
+            meio de grandes conjuntos de dados.</p>
+          <p>A robótica autônoma trabalha com algoritmos de inteligência artificial, podendo tomar decisões e
+            compartilhar experiências com outros equipamentos. </p>
+          <p>A simulação computacional consiste em programas que simulam comportamentos de produtos e processos. </p>
+          <p>A internet das coisas realiza a interconexão de objetos por meio da internet. </p>
+          <p>A cibersegurança é o conjunto de técnicas e tecnologias que buscam prevenir e combater ameaças
+            cibernéticas. </p>
+          <p>A integração de sistemas integra fabricantes, fornecedores, distribuidores e clientes. </p>
+          <p>A computação na nuvem se refere a servidores e computadores hospedados em <i>data centers</i> e
+            interligados por meio da internet. </p>
+          <p>A impressão 3D se refere a equipamentos de prototipagem rápida, com tecnologia CNC, conhecida como controle
+            numérico computadorizado. </p>
+          <p>A realidade aumentada se refere à tecnologia que integra um conteúdo virtual dentro de um cenário real com
+            base em câmeras. </p>
+          <p>Busque exemplos dos pilares da Indústria 4.0 e veja quanto eles já fazem parte da sua vida! </p>
+          <p>Bons estudos e até mais! </p>
+        </div>
         <h3>Encerramento</h3>
-        <p>Neste conhecimento, você aprendeu como os processos fabris e a tecnologia moldaram o ambiente em que se vive. A indústria desempenha um papel importante na criação de móveis, acabamentos e elementos que integram os espaços projetados. Conhecendo essa trajetória, você será capaz de tomar decisões mais informadas na seleção de materiais, de mobiliário e de tecnologias para seus projetos de design de interiores. </p>
+        <p>Neste conhecimento, você aprendeu como os processos fabris e a tecnologia moldaram o ambiente em que se vive.
+          A indústria desempenha um papel importante na criação de móveis, acabamentos e elementos que integram os
+          espaços projetados. Conhecendo essa trajetória, você será capaz de tomar decisões mais informadas na seleção
+          de materiais, de mobiliário e de tecnologias para seus projetos de design de interiores. </p>
         <img src="imgs/img_final.png" class="no-print img-responsive center-block" aria-hidden="true">
       </div>
     </section>
