--- a/04_modelos_consumo/index.html
+++ b/04_modelos_consumo/index.html
@@ -108,7 +108,7 @@
                 <button type="button" class="btn bt-reciclar" data-toggle="popover" data-placement="top" title="Reciclar" data-content="Concentra-se na regeneração de recursos renováveis dos componentes, dos materiais e dos resíduos após o uso."></button>
               </div>
             </div>
-            <div class="acessivel print" aria-hidden="true">
+            <div class="acessivel print">
               <p><b>Reduzir</b> refere-se à diminuição da quantidade de insumos e substâncias usadas no processo de produção e consumo. </p>
               <p><b>Reutilizar</b> diz respeito à extensão da vida útil do produto por meio do reúso. </p>
               <p><b>Reciclar</b> concentra-se na regeneração de recursos renováveis dos componentes, dos materiais e dos resíduos após o uso. </p>
