--- a/05_re-design_materiais/index.html
+++ b/05_re-design_materiais/index.html
@@ -155,7 +155,7 @@
                       <p>Confira nas imagens que novos usos e funções podem ser dados a objetos descartados, como garrafas de vidro que se transformam em luminárias, ou esquadrias que foram substituídas e podem ter novas funções, como se transformar em móveis.<br></p>
                       <img src="imgs/figura_1.jpg" class="center-block img-responsive hidden-sm hidden-xs" alt="A figura mostra duas imagens. Na imagem “a” há um dormitório com cama sem estrado, iluminada com entrada lateral de luz. Sobre a cama existem almofadas e no chão há um tapete sob piso laminado. Perto do observador há um biombo feito de esquadrias de janelas antigas, feitas em madeira. Na figura “b” há garrafas de vidro de diferentes formatos e cores, transformadas em luminárias pendentes.">
                       <p class="no-print visible-sm visible-xs" aria-hidden="true">Toque na imagem para ampliá-la.</p>
-                      <a href="imgs/figura_1.jpg" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_1.jpg" class="center-block img-responsive"></a>
+                      <a href="imgs/figura_1.jpg" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_1.jpg" class="center-block img-responsive" alt="A figura mostra duas imagens. Na imagem “a” há um dormitório com cama sem estrado, iluminada com entrada lateral de luz. Sobre a cama existem almofadas e no chão há um tapete sob piso laminado. Perto do observador há um biombo feito de esquadrias de janelas antigas, feitas em madeira. Na figura “b” há garrafas de vidro de diferentes formatos e cores, transformadas em luminárias pendentes."></a>
                       <p class="legenda-imagem">
                         Exemplos de materiais renováveis <br>
                         Fonte: a) Moviflor (2022); b) Can Stock Photo (2023)
@@ -187,7 +187,7 @@
                       <p>No <i>design</i> de interiores encontram-se vários <i>cases</i> nos quais ocorre a prática do <i>retrofit</i>. Você já deve ter visto ou ouvido falar da transformação de antigos armazéns em <i>lofts</i> modernos, não é? Isso é <i>retrofit</i>! Quando esses espaços são reformados, sendo a estrutura original de tijolos expostos e as vigas de aço mantidas enquanto os interiores são atualizados com acabamentos contemporâneos, móveis elegantes e iluminação moderna, isso é um caso clássico de readequação de um espaço antigo para um novo uso.</p>
                       <img src="imgs/figura_2.jpg" class="center-block img-responsive hidden-sm hidden-xs" alt="Na imagem há um amplo espaço em que há apenas uma escada que segue para um mezanino, ambos em metal. O piso é de cimento e as paredes de tijolo. O pé direito é duplo e há uma grande entrada de luz pelo lado direito da imagem.">
                       <p class="no-print visible-sm visible-xs" aria-hidden="true">Toque na imagem para ampliá-la.</p>
-                      <a href="imgs/figura_2.jpg" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_2.jpg" class="center-block img-responsive"></a>
+                      <a href="imgs/figura_2.jpg" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_2.jpg" class="center-block img-responsive" alt="Na imagem há um amplo espaço em que há apenas uma escada que segue para um mezanino, ambos em metal. O piso é de cimento e as paredes de tijolo. O pé direito é duplo e há uma grande entrada de luz pelo lado direito da imagem."></a>
                       <p class="legenda-imagem">
                         Antigo armazém <br>
                         Fonte: Freepik (2023)
@@ -195,7 +195,7 @@
                       <p>Outro exemplo clássico é a reforma de uma casa histórica. Uma casa antiga com características arquitetônicas únicas pode ser reformada para preservar sua história e seu charme. Elementos como portas ornamentadas, pisos de madeira antigos e molduras podem ser restaurados, enquanto os espaços internos são reconfigurados para atender às necessidades dos moradores atuais.</p>
                       <img src="imgs/figura_3.jpg" class="center-block img-responsive hidden-sm hidden-xs" alt="Na imagem há um amplo espaço em que há apenas uma escada que segue para um mezanino, ambos em metal. O piso é de cimento e as paredes de tijolo. O pé direito é duplo e há uma grande entrada de luz pelo lado direito da imagem.">
                       <p class="no-print visible-sm visible-xs" aria-hidden="true">Toque na imagem para ampliá-la.</p>
-                      <a href="imgs/figura_3.jpg" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_3.jpg" class="center-block img-responsive"></a>
+                      <a href="imgs/figura_3.jpg" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_3.jpg" class="center-block img-responsive" alt="Na imagem há uma casa antiga de esquina, com amplas janelas, e algumas construções ao redor. A casa tem os tijolos à vista e no centro da imagem aparecem mãos posicionando uma moldura vazada em frente à casa."></a>
                       <p class="legenda-imagem">
                         Casa antiga <br>
                         Fonte: Freepik (2023)
@@ -282,7 +282,7 @@
                                 A customização também inclui a incorporação de objetos decorativos, arte e itens pessoais que representem a história, memórias e preferências do cliente, tornando o ambiente mais acolhedor e autêntico.
                                 <img src="imgs/figura_4.jpg" class="center-block img-responsive hidden-sm hidden-xs" alt="Na imagem há um antigo receptor de rádio de luxo. Sobre ele há um pequeno vaso de flores em metal, com flores delicadas na cor roxa. Atrás do móvel há um fundo escuro e o piso é de madeira, com tapete acinzentado próximo ao receptor.">
                                 <p class="no-print visible-sm visible-xs" aria-hidden="true">Toque na imagem para ampliá-la.</p>
-                                <a href="imgs/figura_4.jpg" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_4.jpg" class="center-block img-responsive"></a>
+                                <a href="imgs/figura_4.jpg" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_4.jpg" class="center-block img-responsive" alt="Na imagem há um antigo receptor de rádio de luxo. Sobre ele há um pequeno vaso de flores em metal, com flores delicadas na cor roxa. Atrás do móvel há um fundo escuro e o piso é de madeira, com tapete acinzentado próximo ao receptor. "></a>
                                 <p class="legenda-imagem">
                                   Antigo receptor de rádio de luxo <br>
                                   Fonte: Freepik (2023)
