--- a/06_meio_ambiente/index.html
+++ b/06_meio_ambiente/index.html
@@ -92,6 +92,44 @@
                   </p>
                   <h1>Espera para vídeo</h1>
                   <video></video>
+                  <div class="acessivel print">
+                    <h3>Materiais para Jardim </h3>
+                    <p>Neste vídeo, você vai conhecer mais sobre os biomas e as plantas brasileiras. Vamos começar?  </p>
+                    <p>Primeiramente, o maior bioma brasileiro: a Amazônia. Você sabia que sua floresta tropical abriga a maior diversidade de plantas do planeta?   </p>
+                    <p>Árvores gigantes formam um dossel que proporciona sombra para as plantas de sub-bosque.   </p>
+                    <p>A sumaúma, conhecida como “árvore-mãe-da-floresta”, pode atingir até 50 metros de comprimento.  </p>
+                    <p>Outros exemplos são a seringueira, que produz o látex usado na fabricação de borracha, e a castanheira, com suas saborosas castanhas.   </p>
+                    <p>Os sub-bosques são um espetáculo à parte, com uma diversidade incrível de plantas rasteiras.  </p>
+                    <p>Há helicônias, begônias, bromélias e orquídeas, que se adaptaram a diferentes níveis de luminosidade.  </p>
+                    <p>No bioma Cerrado, encontramos uma vegetação adaptada a suas condições climáticas.   </p>
+                    <p>As plantas são resistentes à seca e ao fogo e têm folhas pequenas e raízes profundas.   </p>
+                    <p>Por exemplo, o buriti, uma palmeira de grande porte, de folhas em leque e frutos comestíveis.    </p>
+                    <p>Há também o pequi, com seus frutos ricos em polpa e sabor único.  </p>
+                    <p>O ipê-amarelo, com sua copa cheia de flores, é uma das árvores mais emblemáticas desse bioma.   </p>
+                    <p>É comum ver campos floridos durante o período das chuvas, com espécies como o girassol-do-cerrado e o sempre-viva.  </p>
+                    <p>No bioma Pantanal, as plantas precisam se adaptar às enchentes sazonais e à inundação do solo.   </p>
+                    <p>Por exemplo, a vitória-régia, uma planta aquática com enormes folhas flutuantes e flores brancas.  </p>
+                    <p>Também há o cambará, uma árvore de grande porte que fornece abrigo e alimento para várias espécies.   </p>
+                    <p>O babaçu é uma palmeira típica e fornece alimento e matéria-prima para a comunidade local.  </p>
+                    <p>O bioma Caatinga apresenta um clima semiárido com altas temperaturas e baixos índices pluviométricos.   </p>
+                    <p>As plantas nativas evoluíram com características morfológicas, fisiológicas e reprodutivas específicas para enfrentar as condições áridas e quentes.   </p>
+                    <p>Podemos destacar os representantes da família <i>Cactaceae (CACTÁCE)</i>.   </p>
+                    <p>Essa espécie se adaptou para armazenar água em seus tecidos e reduzir a perda hídrica por meio de seus espinhos.   </p>
+                    <p>As árvores têm folhas pequenas e troncos retorcidos, o que diminui a transpiração e a exposição à radiação solar direta.  </p>
+                    <p>As espécies mais comuns são mandacaru, juazeiro, umbu e xiquexique, entre outras.   </p>
+                    <p>No Pampa, bioma de campos e coxilhas do sul do Brasil, as plantas lidam com ventos fortes, variações de temperatura e solos rasos.   </p>
+                    <p>O nome “pampa” tem origem indígena e significa “região plana”.</p>  
+                    <p>Os campos são dominados por gramíneas, como capim, forquilha, capim-mimoso e capim-barba-de-bode.  </p>
+                    <p>Além de árvores como o quebracho, conhecido pela resistência de sua madeira, e o butiá, palmeira que produz um fruto comestível e é símbolo da região.   </p>
+                    <p>O bioma da Mata Atlântica já ocupou uma grande extensão da costa brasileira, mas hoje está fragmentado.   </p>
+                    <p>O pau-brasil, famoso durante o período colonial, tem uma madeira valiosa de cor avermelhada.   </p>
+                    <p>A palmeira-juçara, conhecida como açaí-do-mato, tem sua polpa utilizada na produção de alimentos.   </p>
+                    <p>A bromélia-imperial, com sua inflorescência majestosa, é uma das espécies mais icônicas.  </p>
+                    <p>Atenção: muitas espécies desse bioma são endêmicas, ou seja, encontradas apenas nesse ecossistema.    </p>
+                    <p>Já na região Sul, encontramos a Floresta de Araucárias, formada por pinheiros, imbuias, ervas-mate e ipês, entre outras árvores.  </p>
+                    <p>Finalizando o nosso passeio pelos biomas brasileiros e suas plantas nativas, somos convidados a ver o <i>design</i> de interiores como uma oportunidade de trazer a natureza para os nossos lares, valorizando a biodiversidade brasileira.   </p>
+                    <p>Inspirados pela natureza, podemos criar ambientes únicos e sustentáveis, que refletem a nossa identidade e contribuem na preservação e na valorização do patrimônio natural que nos cerca. </p>
+                  </div>
               </div>
             </div>
           </div>
