--- a/06_meio_ambiente/index.html
+++ b/06_meio_ambiente/index.html
@@ -90,8 +90,11 @@
                   <p>
                     Que tal embarcar em uma jornada por esses biomas fascinantes e descobrir as plantas que os tornam tão especiais? Confira no vídeo a seguir. 
                   </p>
-                  <h1>Espera para vídeo</h1>
-                  <video></video>
+                  <iframe class="d-print-none video1" src="https://www.youtube.com/embed/2C1oZ1GSVuI?si=oiuJ9_lTz6h-vcqo" 
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen>
+                </iframe>
                   <div class="acessivel print">
                     <h3>Materiais para Jardim </h3>
                     <p>Neste vídeo, você vai conhecer mais sobre os biomas e as plantas brasileiras. Vamos começar?  </p>
