--- a/08_urban_jungle/index.html
+++ b/08_urban_jungle/index.html
@@ -529,7 +529,7 @@
                 <li>Passo 6: crie arranjos e composições.</li>
                 <li>Passo 7: cuide das plantas e curta a <i>urban jungle</i>.</li>
               </ul>
-              <img src="imgs/plantas_infografico.png" class="">
+              <img src="imgs/plantas_infografico.png" class="no-print">
             </div>
             
             <img src="imgs/figura_12.jpg" class="img-responsive center-block">
