ajustes do material 2

--- a/02_sustentabilidade_nos_ambientes/index.html
+++ b/02_sustentabilidade_nos_ambientes/index.html
@@ -147,10 +147,10 @@
                   <p>Este pilar tem como foco ações que possam reduzir a exploração de recursos naturais e o impacto da empresa ao meio ambiente. É necessário identificar o efeito que sua produção tem no ecossistema e quais as formas de minimizar os danos causados. Apoiar causas socioambientais também contribui para a implementação desse pilar. Podem ser enumeradas como ações sustentáveis os investimentos em eficiência energética e o reúso de água em edifícios, assim como o descarte correto de resíduos de obras.</p>
                 </div>
 
-              <p>Você pode aplicar os pilares da sustentabilidade na sua vida profissional procurando escolher produtos de empresas que se orientem a partir dos conceitos mencionados. Além disso, também pode adotar ações na sua empresa ou na sua conduta como profissional autônomo que considerem o meio ambiente, a sociedade e a gestão financeira a partir de um olhar sustentável.</p>
+                <p>Você pode aplicar os pilares da sustentabilidade na sua vida profissional procurando escolher produtos de empresas que se orientem a partir dos conceitos mencionados. Além disso, também pode adotar ações na sua empresa ou na sua conduta como profissional autônomo que considerem o meio ambiente, a sociedade e a gestão financeira a partir de um olhar sustentável.</p>
                             
 
-            </div>
+              </div>
             </div>
 
             <div class="bloco escuro">
@@ -979,12 +979,39 @@
                   <p class="no-print">Descrição: A imagem mostra uma sala na qual todas as superfícies da parede contêm mecanismos de fixação de formas.</p>
                   <p>Espaços acessíveis melhoram a vida das pessoas, pois possibilitam espaços mais igualitários, de uso facilitado e que propiciam mais bem-estar. Além de contribuir para uma sociedade mais inclusiva, a acessibilidade no <i>design</i> de interiores também pode promover a sustentabilidade ao criar espaços eficientes, duráveis e adaptáveis.</p>
                   <p>Agora que você já conheceu as estratégias sustentáveis, é importante salientar que o <i>designer</i> de interiores tem limitações para a aplicação de algumas ações, ou porque elas dependem de intervenções para as quais apenas arquitetos e engenheiros estão habilitados, sendo nesse caso necessário estabelecer parcerias, ou porque, uma vez que a edificação está construída, ela não comporta modificações, como é o caso de <i>brises</i>, aberturas em fachadas de edifícios e nas instalações. No entanto, é importante que o profissional reconheça essas aplicações, pois elas cada vez mais farão parte das estruturas que serão encontradas nas edificações com as quais o profissional trabalhará. Assista ao vídeo a seguir e conheça algumas dessas aplicações:</p>
+                  <h4>Estratégias sustentáveis FECOMÉRCIO</h4>
+                  <p>A sede da Fecomércio, Sesc e Senac está localizada em Porto Alegre e teve seu projeto arquitetônico desenvolvido pelo Estúdio 41.   </p>
+                  <p>Foi construída de acordo com a certificação AQUA de Construção Sustentável, que apresenta soluções de sustentabilidade socioambiental.  </p>
+                  <p>Neste vídeo, você vai conhecer algumas estratégias sustentáveis da sede.  </p>
+                  <p>O projeto de implantação do edifício visava que ele fosse ao mesmo tempo objeto e paisagem; cobertura e relevo; abrigo e área aberta; promovendo, assim, vistas generosas da paisagem e espaços de convívio. Integrar pessoas à natureza é um dos princípios do design biofílico.  </p>
+                  <p>Laje com cobertura verde  </p>
+                  <p>Foram instalados 10 mil metros de telhados verdes. A instalação ajuda no isolamento térmico e retém água da chuva em bandejas abaixo do substrato e da grama da superfície.  </p>
+                  <p>Essa água vai para cisternas que podem irrigar a vegetação do telhado ou, ainda, serem destinadas para o lago ou jardinagem.     </p>
+                  <p>Isso reduz os custos com energia e água potável, além de evitar inundações na área urbana.  </p>
+                  <p>Na ventilação cruzada, há janelas em paredes opostas ou perpendiculares, proporcionando, assim, a entrada e a saída de ar no prédio.   </p>
+                  <p>Isso melhora as condições climáticas, pois possibilita a movimentação das massas de ar quente para fora do edifício, quando necessário.   </p>
+                  <p>Luz natural abundante  </p>
+                  <p>O prédio contém grandes planos envidraçados que permitem a entrada de luz natural em abundância, reduzindo, dessa forma, a necessidade de iluminação artificial durante o dia. Além disso, contribuem para o ciclo circadiano das pessoas.   </p>
+                  <p>Proteção de fachadas contra incidência solar  </p>
+                  <p>As fachadas têm proteções de acordo com sua orientação solar, ou seja, existe o aproveitamento da luz natural, mas os ocupantes não sofrem com aquecimento térmico ou ofuscamento. As fachadas de vidro norte receberam brises horizontais.   </p>
+                  <p>Algumas fachadas, leste e oeste, receberam chapas de aço expandidas na vertical, enquanto as demais têm planos mais opacos.   </p>
+                  <p>Miniusina fotovoltaica    </p>
+                  <p>Foram utilizadas placas de aquecimento solar para produção de energia.  </p>
+                  <p>Para executar o projeto de iluminação, foram realizadas simulações em quase todos os ambientes. O objetivo era garantir que as necessidades fossem atendidas sem desperdícios.  </p>
+                  <p>Pavimentação permeável  </p>
+                  <p>Foram utilizados blocos de concreto intertravado para melhorar a permeabilidade do solo.   </p>
+                  <p>Essa prática auxilia na vazão de água e evita alagamentos.   </p>
+                  <p>Optou-se pela construção com pré-moldados, reduzindo a produção de resíduos e de acidentes de trabalho.  </p>
+                  <p>As atividades administrativas são realizadas em uma torre com pavimentos de planta aberta, proporcionando flexibilidade de uso.  </p>
+                  <p>O sistema de climatização e iluminação é automatizado.  </p>
+                  <p>Por fim, é feito o uso de gás natural nos geradores e nas cozinhas.  </p>
+                  <p>A construção sustentável é tendência para o futuro. Busque mais inspirações e inove. Bons estudos!</p>
                   <p>Você percebeu que todas as estratégias sustentáveis apresentadas estão de alguma forma relacionadas ao tripé da sustentabilidade? Quando se proporciona bem-estar aos seres humanos, a partir de práticas que respeitam o meio ambiente e os indivíduos, também se permite pessoas mais felizes e produtivas, que contribuem para a economia e manutenção dos recursos naturais. É um sistema que se retroalimenta e no qual o designer de interiores pode desempenhar um importante papel a partir de uma visão sistêmica e ética refletida nas suas tomadas de decisão.</p>
                 </div>  
               </div>
             </div>
 
-            <div class="bloco no-print" >
+            <div class="bloco no-print" aria-hidden="true">
               <div class="container">
                 <p>
                   Agora que você já estudou as estratégias sustentáveis, que tal testar seus conhecimentos com um simulador?
